// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button false"
  data-jsx={2754396381}
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button urgent text prefix 1`] = `
<button
  className="Button urgent"
  data-jsx={2754396381}
  onClick={[Function]}
>
  !Cancel
</button>
`;

exports[`Storyshots Button urgent text sufix 1`] = `
<button
  className="Button urgent"
  data-jsx={2754396381}
  onClick={[Function]}
>
  Cancel!
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button false"
  data-jsx={2754396381}
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Layout PageFrame 1`] = `
<div
  className="ScreenFrame"
  data-jsx={1508683191}
>
  <div
    className="PageFrame"
    data-jsx={682371869}
  >
    PageFrame
  </div>
</div>
`;

exports[`Storyshots Layout ScreenFrame 1`] = `
<div
  className="ScreenFrame"
  data-jsx={1508683191}
>
  ScreenFrame
</div>
`;
